// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider component renderers should render Slider 1`] = `
<span
  className=""
>
  <ComponentEnhancer(undefined)
    activeDotStyle={Object {}}
    className=""
    disabled={false}
    dotStyle={Object {}}
    dots={false}
    emptyValueLabel="no label"
    handle={[Function]}
    handleStyle={
      Array [
        Object {},
      ]
    }
    id="selectable"
    included={true}
    marks={Object {}}
    max={100}
    min={0}
    onAfterChange={[Function]}
    onBeforeChange={[Function]}
    onChange={[Function]}
    prefixCls="rc-slider"
    railStyle={Object {}}
    step={1}
    trackStyle={
      Array [
        Object {},
      ]
    }
    value={undefined}
    vertical={false}
  />
</span>
`;

exports[`Slider component renderers should render Slider with captionTextStepNumber 1`] = `
<span
  className=""
>
  <ComponentEnhancer(undefined)
    activeDotStyle={Object {}}
    className=""
    disabled={false}
    dotStyle={Object {}}
    dots={false}
    handle={[Function]}
    handleStyle={
      Array [
        Object {},
      ]
    }
    id="selectable"
    included={true}
    label="Heeey"
    marks={Object {}}
    max={100}
    min={0}
    onAfterChange={[Function]}
    onBeforeChange={[Function]}
    onChange={[Function]}
    prefixCls="rc-slider"
    railStyle={Object {}}
    step={1}
    trackStyle={
      Array [
        Object {},
      ]
    }
    value={45}
    vertical={false}
  />
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      0%
    </span>
    <span
      className={undefined}
    >
      25%
    </span>
    <span
      className={undefined}
    >
      50%
    </span>
    <span
      className={undefined}
    >
      75%
    </span>
    <span
      className={undefined}
    >
      100%
    </span>
  </div>
</span>
`;

exports[`Slider component renderers should render Slider with icons on status 1`] = `
<span
  className=""
>
  <ComponentEnhancer(undefined)
    activeDotStyle={Object {}}
    className=""
    disabled={false}
    dotStyle={Object {}}
    dots={false}
    handle={[Function]}
    handleStyle={
      Array [
        Object {},
      ]
    }
    id="selectable"
    included={true}
    label="Heeey"
    marks={Object {}}
    max={100}
    min={0}
    onAfterChange={[Function]}
    onBeforeChange={[Function]}
    onChange={[Function]}
    prefixCls="rc-slider"
    railStyle={Object {}}
    step={1}
    trackStyle={
      Array [
        Object {},
      ]
    }
    value={45}
    vertical={false}
  />
  <div
    className={undefined}
  >
    <Icon
      className={null}
      name="talend-smiley-rating"
    />
    <Icon
      className={null}
      name="talend-most-trusted"
    />
    <Icon
      className={undefined}
      name="talend-network"
    />
    <Icon
      className={null}
      name="talend-streams"
    />
    <Icon
      className={null}
      name="talend-tdc-negative"
    />
  </div>
</span>
`;
